--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask>=1.0,<=1.1.2
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.8.1+cpu
 tensorflow-cpu
 numpy==1.17.5
