--- a/requirementsbackup.txt
+++ b/requirementsbackup.txt
@@ -1,18 +1,26 @@
-Flask
+Flask>=1.0,<=1.1.2
 --find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.8.1+cpu
-numpy==1.19
+tensorflow-cpu
+numpy=1.19
 scipy>=0.19.0
 numba==0.48
 librosa==0.7.2
+phonemizer>=2.2.0
 unidecode==0.4.20
+tensorboardX
+matplotlib
+Pillow
+tqdm
 inflect
+bokeh==1.4.0
 pysbd
 pyworld
 soundfile
 nose==1.3.7
 cardboardlint==1.3.0
 pylint==2.5.3
-cython
-packaging
 gdown
+umap-learn==0.4.6
+cython
+pyyaml
